[workspace]
resolver = "2"
members = ["catalog", "config", "generate_pages", "pages"]

[workspace.dependencies]
coyote = { git = "https://github.com/wolfpup-software/coyote-rs", version = "0.1.0" }
coyote_html = { git = "https://github.com/wolfpup-software/coyote-rs", version = "0.1.0" }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
